Added site info route
